; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/omapdrm/dss/extr_dispc.c_dispc_mgr_set_size.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/omapdrm/dss/extr_dispc.c_dispc_mgr_set_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dispc_device = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dispc_device*, i32, i64, i64)* @dispc_mgr_set_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dispc_mgr_set_size(%struct.dispc_device* %0, i32 %1, i64 %2, i64 %3) #0 {
  %5 = alloca %struct.dispc_device*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  store %struct.dispc_device* %0, %struct.dispc_device** %5, align 8
  store i32 %1, i32* %6, align 4
  store i64 %2, i64* %7, align 8
  store i64 %3, i64* %8, align 8
  %10 = load i64, i64* %8, align 8
  %11 = sub nsw i64 %10, 1
  %12 = load %struct.dispc_device*, %struct.dispc_device** %5, align 8
  %13 = getelementptr inbounds %struct.dispc_device, %struct.dispc_device* %12, i32 0, i32 0
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @FLD_VAL(i64 %11, i32 %16, i32 16)
  %18 = load i64, i64* %7, align 8
  %19 = sub nsw i64 %18, 1
  %20 = load %struct.dispc_device*, %struct.dispc_device** %5, align 8
  %21 = getelementptr inbounds %struct.dispc_device, %struct.dispc_device* %20, i32 0, i32 0
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @FLD_VAL(i64 %19, i32 %24, i32 0)
  %26 = or i32 %17, %25
  store i32 %26, i32* %9, align 4
  %27 = load %struct.dispc_device*, %struct.dispc_device** %5, align 8
  %28 = load i32, i32* %6, align 4
  %29 = call i32 @DISPC_SIZE_MGR(i32 %28)
  %30 = load i32, i32* %9, align 4
  %31 = call i32 @dispc_write_reg(%struct.dispc_device* %27, i32 %29, i32 %30)
  ret void
}

declare dso_local i32 @FLD_VAL(i64, i32, i32) #1

declare dso_local i32 @dispc_write_reg(%struct.dispc_device*, i32, i32) #1

declare dso_local i32 @DISPC_SIZE_MGR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
